# alithia-researcher

./: .gitignore  AGENTS.md  ALITHIA_ARXREC_AGENT.md  GEMINI.md  IFLOW.md  Makefile  README.md  alithia_config_example.json  arxrec_agent_example.json  arxrec_example.json  env.example  pyproject.toml  pytest.ini
.cursor/: rules.md
.github/workflows/: ci.yml  daily-papers-test.yml  daily-papers.yml
alithia/: __init__.py  main.py
alithia/agents/: nodes.py  research_agent.py  state.py
alithia/agents/arxrec/: __main__.py  arxrec_agent.py  nodes.py  research_agent.py  state.py
alithia/agents/lens/: agent.py  embedding.py  nodes.py  pdf_processor.py  table_store.py  vector_store.py
alithia/agents/vigil/: agent.py  nodes.py
alithia/cli/: lens.py  main.py  vigil.py
alithia/config/: loader.py
alithia/core/: __init__.py  arxiv_client.py  arxiv_paper_utils.py  email_utils.py  embedding.py  llm_utils.py  pdf_processor.py  profile.py  recommender.py  table_store.py  vector_store.py
alithia/core/researcher/: connected.py  profile.py
alithia/core/tools/: __init__.py  base.py  code_generator.py  models.py  pdf_parser.py  reference_linker.py  web_searcher.py
alithia/models/: paper.py  profile.py
alithia/utils/: arxiv_client.py  email_utils.py  llm_utils.py  recommender.py
docs/: conf.py  index.rst
docs/guide/: ALITHIA_ARXREC_AGENT.md
docs/sphinx/: conf.py  index.rst
specs/: 2_lens_tools.md  design.md  prd.md
tests/: README.md  run_integration_tests.py
tests/integration/: __init__.py  test_arxiv_client.py  test_embedding_service_integration.py  test_tools_integration.py  test_zotero_client_integration.py
tests/unit/: __init__.py  test_agent_state.py  test_arxiv_client_unit.py  test_arxiv_paper_utils_unit.py  test_code_generator_tool_unit.py  test_email_utils.py  test_embedding_unit.py  test_llm_utils.py  test_paper_models.py  test_pdf_parser_tool_unit.py  test_profile.py  test_reference_linker_methods_unit.py  test_reference_linker_tool_unit.py  test_table_and_vector_store_unit.py  test_tools_base.py  test_tools_models_unit.py  test_web_searcher_tool_unit.py
